# gmr-rs

./: Cargo.toml  Makefile  README.md
circuits/: and.json  complex_circuit.json  full_adder.json  half_adder.json  half_adder_no_formula.json  mux_2to1.json  not.json  or.json  simple.json  two_bit_equality.json  xor.json
src/: lib.rs  main.rs  party.rs  protocol.rs
src/circuit/: evaluator.rs  mod.rs  parser.rs  types.rs
src/gates/: and.rs  and_3party.rs  mod.rs  not.rs  not_3party.rs  or.rs  or_3party.rs  xor.rs  xor_3party.rs
src/ot/: mod.rs
