[package]
name = "gmw-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitvec = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
oblivious-transfer-rs = { git = "https://github.com/kobakaku/oblivious-transfer-rs", rev = "570ea6abf204b1b01ab2d6851d83807878f23f24" }
