[package]
name = "gmw-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitvec = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
oblivious-transfer-rs = { git = "https://github.com/kobakaku/oblivious-transfer-rs", rev = "6f0dddb3b9a55b46cb27db7858a1f0c5d0af9541" }

